--- a/teacher.html
+++ b/teacher.html
@@ -60,18 +60,23 @@ if (profileError || !profile || profile.role !== "teacher") {
 // --------------------
 // 5️⃣ Fetch assigned classes WITH SUBJECTS
 // --------------------
+// --------------------
+// Fetch assigned classes WITH subjects
+// --------------------
 const { data: assignedClasses, error } = await supabase
   .from("teacher_subjects")
   .select(`
-    class_id,
+    id,
     subject_id,
-    classes (
+    classes!inner (
       id,
       name,
       academic_year,
-      grades ( grade_number )
+      grades (
+        grade_number
+      )
     ),
-    subjects (
+    subjects!inner (
       id,
       name
     )
@@ -79,10 +84,9 @@ const { data: assignedClasses, error } = await supabase
   .eq("teacher_id", profile.id);
 
 if (error) {
-  classListEl.innerText = "Failed to load assigned classes";
   console.error(error);
+  classListEl.innerText = "Failed to load assigned classes";
 }
-
 // --------------------
 // 6️⃣ Filter current year
 // --------------------
@@ -95,29 +99,32 @@ const validClasses = (assignedClasses || [])
 // --------------------
 // 7️⃣ Render class + subject cards
 // --------------------
-if (validClasses.length === 0) {
+if (!assignedClasses || assignedClasses.length === 0) {
   classListEl.innerText = `No classes assigned for ${CURRENT_YEAR}`;
 } else {
-  classListEl.innerHTML = validClasses.map(row => {
-    const c = row.classes;
-    const subjectName = row.subjects?.name || "Unknown Subject";
 
-    return `
-      <div class="class-card" data-year="${c.academic_year}">
-        <strong>${c.name} - ${subjectName}</strong><br>
-        Grade: ${c.grades ? c.grades.grade_number : 'N/A'}<br>
-        Academic Year: ${c.academic_year}<br><br>
+  classListEl.innerHTML = assignedClasses
+    .filter(row => Number(row.classes.academic_year) === CURRENT_YEAR)
+    .map(row => {
 
-        <button 
-          data-class="${c.id}" 
-          data-subject="${row.subject_id}">
-          Start Assessment
-        </button>
-      </div>
-    `;
-  }).join("");
+      const c = row.classes;
+      const subjectName = row.subjects.name;
+
+      return `
+        <div class="class-card" data-year="${c.academic_year}">
+          <strong>${c.name} - ${subjectName}</strong><br>
+          Grade: ${c.grades?.grade_number ?? 'N/A'}<br>
+          Academic Year: ${c.academic_year}<br><br>
+
+          <button 
+            data-class="${c.id}" 
+            data-subject="${row.subject_id}">
+            Start Assessment
+          </button>
+        </div>
+      `;
+    }).join("");
 }
-
   
 // --------------------
 // 8️⃣ Button click handler
