--- a/teacher.html
+++ b/teacher.html
@@ -18,34 +18,23 @@
 <script type="module">
 import { createClient } from "https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm";
 
-// --------------------
 // 1️⃣ Supabase client
-// --------------------
 const supabase = createClient(
   "https://zcmzuetusvpmvubbjlmx.supabase.co",
   "sb_publishable_-BGJLAySaH7bQ5lBIZF9zg_eohK-xEn"
 );
 
-// --------------------
-// 2️⃣ Constants
-// --------------------
 const CURRENT_YEAR = 2026;
 const classListEl = document.getElementById("classList");
 
-// --------------------
-// 3️⃣ Get logged-in user
-// --------------------
+// 2️⃣ Get logged-in user
 const { data: { user } } = await supabase.auth.getUser();
-if (!user) {
-  window.location.href = "index.html";
-}
+if (!user) window.location.href = "index.html";
 
-// --------------------
-// 4️⃣ Get teacher profile
-// --------------------
+// 3️⃣ Get teacher profile
 const { data: profile, error: profileError } = await supabase
   .from("profiles")
-  .select("id, auth_id, role, school_id")
+  .select("id, role")
   .eq("auth_id", user.id)
   .single();
 
@@ -53,20 +42,10 @@ if (profileError || !profile || profile.role !== "teacher") {
   window.location.href = "index.html";
 }
 
-// --------------------
-// 5️⃣ Fetch assigned classes
-// --------------------
-
-// --------------------
-// 5️⃣ Fetch assigned classes WITH SUBJECTS
-// --------------------
-// --------------------
-// Fetch assigned classes WITH subjects
-// --------------------
+// 4️⃣ Fetch assigned classes WITH subjects
 const { data: assignedClasses, error } = await supabase
   .from("teacher_subjects")
   .select(`
-    id,
     subject_id,
     classes!inner (
       id,
@@ -86,56 +65,47 @@ const { data: assignedClasses, error } = await supabase
 if (error) {
   console.error(error);
   classListEl.innerText = "Failed to load assigned classes";
+  throw error;
 }
-// --------------------
-// 6️⃣ Filter current year
-// --------------------
-const validClasses = (assignedClasses || [])
-  .filter(row => 
-    row.classes &&
-    Number(row.classes.academic_year) === CURRENT_YEAR
-  );
 
-// --------------------
-// 7️⃣ Render class + subject cards
-// --------------------
-if (!assignedClasses || assignedClasses.length === 0) {
+// 5️⃣ Filter only current year
+const validClasses = (assignedClasses || []).filter(row =>
+  row.classes &&
+  Number(row.classes.academic_year) === CURRENT_YEAR
+);
+
+// 6️⃣ Render
+if (validClasses.length === 0) {
   classListEl.innerText = `No classes assigned for ${CURRENT_YEAR}`;
 } else {
+  classListEl.innerHTML = validClasses.map(row => {
+    const c = row.classes;
+    const subjectName = row.subjects?.name || "Unknown Subject";
 
-  classListEl.innerHTML = assignedClasses
-    .filter(row => Number(row.classes.academic_year) === CURRENT_YEAR)
-    .map(row => {
+    return `
+      <div class="class-card" data-year="${c.academic_year}">
+        <strong>${c.name} - ${subjectName}</strong><br>
+        Grade: ${c.grades?.grade_number ?? 'N/A'}<br>
+        Academic Year: ${c.academic_year}<br><br>
 
-      const c = row.classes;
-      const subjectName = row.subjects.name;
-
-      return `
-        <div class="class-card" data-year="${c.academic_year}">
-          <strong>${c.name} - ${subjectName}</strong><br>
-          Grade: ${c.grades?.grade_number ?? 'N/A'}<br>
-          Academic Year: ${c.academic_year}<br><br>
-
-          <button 
-            data-class="${c.id}" 
-            data-subject="${row.subject_id}">
-            Start Assessment
-          </button>
-        </div>
-      `;
-    }).join("");
+        <button 
+          data-class="${c.id}" 
+          data-subject="${row.subject_id}">
+          Start Assessment
+        </button>
+      </div>
+    `;
+  }).join("");
 }
-  
-// --------------------
-// 8️⃣ Button click handler
-// --------------------
+
+// 7️⃣ Button click handler
 classListEl.addEventListener("click", (e) => {
   if (e.target.tagName !== "BUTTON") return;
 
   const card = e.target.closest(".class-card");
-  const classId = e.target.getAttribute("data-class");
-  const subjectId = e.target.getAttribute("data-subject");
-  const academicYear = card.getAttribute("data-year");
+  const classId = e.target.dataset.class;
+  const subjectId = e.target.dataset.subject;
+  const academicYear = card.dataset.year;
 
   localStorage.setItem("class_id", classId);
   localStorage.setItem("subject_id", subjectId);
@@ -144,6 +114,5 @@ classListEl.addEventListener("click", (e) => {
   window.location.href = "assessment-students.html";
 });
 </script>
-
 </body>
 </html>
