--- a/teacher.html
+++ b/teacher.html
@@ -58,67 +58,65 @@ async function loadDashboard() {
     return;
   }
 
-  // 3️⃣ Fetch teacher assignments
- // 3️⃣ Fetch teacher assignments with safe joins
-const { data: assignments, error } = await supabase
-  .from("teacher_subjects")
-  .select(`
-    class_id,
-    subject_id,
-    classes (
-      id,
-      name,
-      academic_year,
-      grades ( grade_number )
-    ),
-    subjects (
-      id,
-      name
-    )
-  `)
-  .eq("teacher_id", profile.id);
+  // 3️⃣ Fetch teacher assignments using the **explicit relationship alias**
+  // Replace 'class_id_fkey' with the exact relationship name Supabase shows for teacher_subjects.class_id
+  const { data: assignments, error } = await supabase
+    .from("teacher_subjects")
+    .select(`
+      class_id,
+      subject_id,
+      teacher_class:class_id_fkey (
+        id,
+        name,
+        academic_year,
+        grades ( grade_number )
+      ),
+      subjects (
+        id,
+        name
+      )
+    `)
+    .eq("teacher_id", profile.id);
 
-if (error) {
-  console.error(error);
-  classListEl.innerText = "Error loading classes";
-  return;
+  if (error) {
+    console.error(error);
+    classListEl.innerText = "Error loading classes";
+    return;
+  }
+
+  // 4️⃣ Filter current academic year
+  const filtered = (assignments || []).filter(row =>
+    row.teacher_class &&
+    Number(row.teacher_class.academic_year) === CURRENT_YEAR
+  );
+
+  if (filtered.length === 0) {
+    classListEl.innerText = `No classes assigned for ${CURRENT_YEAR}`;
+    return;
+  }
+
+  // 5️⃣ Render safely
+  classListEl.innerHTML = filtered.map(row => {
+    const className = row.teacher_class?.name ?? "Unnamed Class";
+    const grade = row.teacher_class?.grades?.grade_number ?? "N/A";
+    const subjectName = row.subjects?.name ?? "Unknown Subject";
+    const academicYear = row.teacher_class?.academic_year ?? "";
+
+    return `
+      <div class="card" data-year="${academicYear}">
+        <strong>${className} - ${subjectName}</strong><br>
+        Grade: ${grade}<br>
+        Academic Year: ${academicYear}<br>
+        <button 
+          data-class="${row.class_id}" 
+          data-subject="${row.subject_id}">
+          Start Assessment
+        </button>
+      </div>
+    `;
+  }).join("");
 }
 
-// 4️⃣ Filter current academic year & remove duplicates
-const filtered = (assignments || []).filter(row =>
-  row.classes &&
-  Number(row.classes.academic_year) === CURRENT_YEAR
-);
-
-if (filtered.length === 0) {
-  classListEl.innerText = `No classes assigned for ${CURRENT_YEAR}`;
-  return;
-}
-
-// 5️⃣ Render safely
-classListEl.innerHTML = filtered.map(row => {
-  const className = row.classes?.name ?? "Unnamed Class";
-  const grade = row.classes?.grades?.grade_number ?? "N/A";
-
-  // Safe subject name: fallback to row.subject_name if join fails
-  const subjectName = row.subjects?.name ?? "Unknown Subject";
-
-  const academicYear = row.classes?.academic_year ?? "";
-
-  return `
-    <div class="card" data-year="${academicYear}">
-      <strong>${className} - ${subjectName}</strong><br>
-      Grade: ${grade}<br>
-      Academic Year: ${academicYear}<br>
-      <button 
-        data-class="${row.class_id}" 
-        data-subject="${row.subject_id}">
-        Start Assessment
-      </button>
-    </div>
-  `;
-}).join("");
-}
 // Button click handler
 classListEl.addEventListener("click", (e) => {
   if (e.target.tagName !== "BUTTON") return;
@@ -142,6 +140,5 @@ classListEl.addEventListener("click", (e) => {
 
 loadDashboard();
 </script>
-
 </body>
 </html>
